@@ -58,23 +58,28 @@ Navigation =
     ["u", "Yuri", "//boards.4chan.org/u/"]
     ["v", "Video Games", "//boards.4chan.org/v/"]
     ["vg", "Video Game Generals", "//boards.4chan.org/vg/"]
+    ["vr", "Retro Games", "//boards.4chan.org/vr/"]
     ["w", "Anime/Wallpapers", "//boards.4chan.org/w/"]
     ["wg", "Wallpapers/General", "//boards.4chan.org/wg/"]
     ["i", "Oekaki", "//boards.4chan.org/i/"]
     ["ic", "Artwork/Critique", "//boards.4chan.org/ic/"]
-    ["r9k", "Robot 9K", "//boards.4chan.org/r9k/"]
+    ["r9k", "ROBOT9001", "//boards.4chan.org/r9k/"]
+    ["s4s", "Shit 4chan Says", "//boards.4chan.org/s4s/"]
     ["cm", "Cute/Male", "//boards.4chan.org/cm/"]
     ["hm", "Handsome Men", "//boards.4chan.org/hm/"]
+    ["lgbt", "LGBT", "//boards.4chan.org/lgbt/"]
     ["y", "Yaoi", "//boards.4chan.org/y/"]
     ["3", "3DCG", "//boards.4chan.org/3/"]
     ["adv", "Advice", "//boards.4chan.org/adv/"]
     ["an", "Animals", "//boards.4chan.org/an/"]
+    ["asp", "Alternative Sports", "//boards.4chan.org/asp/"]
     ["cgl", "Cosplay & EGL", "//boards.4chan.org/cgl/"]
     ["ck", "Food & Cooking", "//boards.4chan.org/ck/"]
     ["co", "Comics & Cartoons", "//boards.4chan.org/co/"]
     ["diy", "Do It Yourself", "//boards.4chan.org/diy/"]
     ["fa", "Fashion", "//boards.4chan.org/fa/"]
     ["fit", "Health & Fitness", "//boards.4chan.org/fit/"]
+    ["gd", "Graphic Design", "//boards.4chan.org/gd/"]
     ["hc", "Hardcore", "//boards.4chan.org/hc/"]
     ["int", "International", "//boards.4chan.org/int/"]
     ["jp", "Otaku Culture", "//boards.4chan.org/jp/"]
@@ -82,6 +87,7 @@ Navigation =
     ["mlp", "My Little Pony", "//boards.4chan.org/mlp/"]
     ["mu", "Music", "//boards.4chan.org/mu/"]
     ["n", "Transportation", "//boards.4chan.org/n/"]
+    ["out", "Outdoors", "//boards.4chan.org/out/"]
     ["po", "Papercraft & Origami", "//boards.4chan.org/po/"]
     ["pol", "Politically Incorrect", "//boards.4chan.org/pol/"]
     ["sci", "Science & Math", "//boards.4chan.org/sci/"]
