@@ -29,7 +29,7 @@ Options =
       innerHTML: '<div id=optionsbar>
   <div id=credits>
     <label for=apply>Apply</label>
-    | <a target=_blank href=http://seaweedchan.github.com/4chan-x/>4chan X</a>
+    | <a target=_blank href=http://seaweedchan.github.io/4chan-x/>4chan X</a>
     | <a target=_blank href=https://raw.github.com/seaweedchan/4chan-x/4chanX/changelog>' + Main.version + '</a>
   </div>
   <div class=tabs>
